# Artificial-Intelligence

Astar_simulation/: README.md  astar.py  grid.py  main.py  map.csv  settings.py
Simulated_annealing/tsp-simulated-annealing/: CMakeLists.txt  README.md
Simulated_annealing/tsp-simulated-annealing/src/: main.cpp  simulated_annealing.cpp  simulated_annealing.h  tsp.cpp  tsp.h
